--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "migration:generate": "npx typeorm-ts-node-commonjs migration:generate ./src/database/migrations/$NAME --timestamp -d ./src/config/dataSource.ts",
     "migration:show": "npx typeorm-ts-node-commonjs migration:show -d ./src/config/dataSource.ts",
     "migration:run": "npx typeorm-ts-node-commonjs migration:run -d  ./src/config/dataSource.ts",
-    "migration:revert": "npx typeorm-ts-node-commonjs migration:revert -d ./src/config/dataSource.ts"
+    "migration:revert": "npx typeorm-ts-node-commonjs migration:revert -d ./src/config/dataSource.ts",
+    "data:sync": "ts-node -r tsconfig-paths/register src/database/seed.ts"
   },
   "dependencies": {
     "@apollo/server": "^4.11.0",
